--- a/index.html
+++ b/index.html
@@ -28,11 +28,101 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+    <!-- Time-Block Area -->
+    <div class="container time-block">
+      <textarea class="row">
+        <div class="col-2 hour">
+          9AM
+        </div>
+        <textarea class="col-8 past">
+        </textarea>
+        <div class="col-2 saveBtn">
+         <i></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 hour">
+          10AM
+        </div>
+        <textarea class="col-8 past">
+        </textarea>
+        <div class="col-2 saveBtn">
+          <i></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 hour">
+          11AM
+        </div>
+        <textarea class="col-8 past">
+        </textarea>
+        <div class="col-2 saveBtn">
+          <i></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 hour">
+          12PM
+        </div>
+        <textarea class="col-8 present">
+        </textarea>
+        <div class="col-2 saveBtn">
+          <i></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 hour">
+          1PM
+        </div>
+        <textarea class="col-8 future">
+        </textarea>
+        <div class="col-2 saveBtn">
+          <i></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 hour">
+          2PM
+        </div>
+        <textarea class="col-8 future">
+        </textarea>
+        <div class="col-2 saveBtn">
+          <i></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 hour">
+          3PM
+        </div>
+        <textarea class="col-8 future">
+        </textarea>
+        <div class="col-2 saveBtn">
+          <i></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 hour">
+          4PM
+        </div>
+        <textarea class="col-8 future">
+        </textarea>
+        <div class="col-2 saveBtn">
+          <i></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 hour">
+          5PM
+        </div>
+        <textarea class="col-8 future">
+        </textarea>
+        <div class="col-2 saveBtn">
+          <i></i>
+        </div>
+      </div>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
