--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <!-- Time-Block Area -->
-    <div class="container time-block">
-      <textarea class="row">
+    <div class="container">
+      <div class="row time-block">
         <div class="col-2 hour">
           9AM
         </div>
@@ -40,7 +40,7 @@
          <i></i>
         </div>
       </div>
-      <div class="row">
+      <div class="row time-block">
         <div class="col-2 hour">
           10AM
         </div>
@@ -50,7 +50,7 @@
           <i></i>
         </div>
       </div>
-      <div class="row">
+      <div class="row time-block">
         <div class="col-2 hour">
           11AM
         </div>
@@ -60,7 +60,7 @@
           <i></i>
         </div>
       </div>
-      <div class="row">
+      <div class="row time-block">
         <div class="col-2 hour">
           12PM
         </div>
@@ -70,7 +70,7 @@
           <i></i>
         </div>
       </div>
-      <div class="row">
+      <div class="row time-block">
         <div class="col-2 hour">
           1PM
         </div>
@@ -100,7 +100,7 @@
           <i></i>
         </div>
       </div>
-      <div class="row">
+      <div class="row time-block">
         <div class="col-2 hour">
           4PM
         </div>
@@ -110,7 +110,7 @@
           <i></i>
         </div>
       </div>
-      <div class="row">
+      <div class="row time-block">
         <div class="col-2 hour">
           5PM
         </div>
