--- a/index.html
+++ b/index.html
@@ -30,95 +30,95 @@
     </header>
     <!-- Time-Block Area -->
     <div class="container">
-      <div class="row time-block">
+
+      <div class="row time-block" id="9">
         <div class="col-2 hour">
-          9AM
+          <p>11AM</p>
         </div>
-        <textarea class="col-8 past">
-        </textarea>
-        <div class="col-2 saveBtn">
-         <i></i>
-        </div>
-      </div>
-      <div class="row time-block">
-        <div class="col-2 hour">
-          10AM
-        </div>
-        <textarea class="col-8 past">
-        </textarea>
-        <div class="col-2 saveBtn">
+        <textarea class="col-8"></textarea>
+        <button class="col-2 saveBtn">
           <i></i>
-        </div>
+        </button>
       </div>
-      <div class="row time-block">
+
+      <div class="row time-block" id="10">
         <div class="col-2 hour">
-          11AM
+          <p>10AM</p>
         </div>
-        <textarea class="col-8 past">
-        </textarea>
-        <div class="col-2 saveBtn">
+        <textarea class="col-8"></textarea>
+        <button class="col-2 saveBtn">
           <i></i>
-        </div>
+        </button>
       </div>
-      <div class="row time-block">
+
+      <div class="row time-block" id="11">
         <div class="col-2 hour">
-          12PM
+          <p>11AM</p>
         </div>
-        <textarea class="col-8 present">
-        </textarea>
-        <div class="col-2 saveBtn">
+        <textarea class="col-8"></textarea>
+        <button class="col-2 saveBtn">
           <i></i>
-        </div>
+        </button>
       </div>
-      <div class="row time-block">
+
+      <div class="row time-block" id="12">
         <div class="col-2 hour">
-          1PM
+          <p>12PM</p>
         </div>
-        <textarea class="col-8 future">
-        </textarea>
-        <div class="col-2 saveBtn">
+        <textarea class="col-8"></textarea>
+        <button class="col-2 saveBtn">
           <i></i>
-        </div>
+        </button>
       </div>
-      <div class="row">
+
+      <div class="row time-block" id="13">
         <div class="col-2 hour">
-          2PM
+          <p>1PM</p>
         </div>
-        <textarea class="col-8 future">
-        </textarea>
-        <div class="col-2 saveBtn">
+        <textarea class="col-8"></textarea>
+        <button class="col-2 saveBtn">
           <i></i>
-        </div>
+        </button>
       </div>
-      <div class="row">
+
+      <div class="row time-block" id="14">
         <div class="col-2 hour">
-          3PM
+          <p>2PM</p>
         </div>
-        <textarea class="col-8 future">
-        </textarea>
-        <div class="col-2 saveBtn">
+        <textarea class="col-8"></textarea>
+        <button class="col-2 saveBtn">
           <i></i>
-        </div>
+        </button>
       </div>
-      <div class="row time-block">
+
+      <div class="row time-block" id="15">
         <div class="col-2 hour">
-          4PM
+          <p>3PM</p>
         </div>
-        <textarea class="col-8 future">
-        </textarea>
-        <div class="col-2 saveBtn">
+        <textarea class="col-8"></textarea>
+        <button class="col-2 saveBtn">
           <i></i>
-        </div>
+        </button>
       </div>
-      <div class="row time-block">
+
+      <div class="row time-block" id="16">
         <div class="col-2 hour">
-          5PM
+          <p>4PM</p>
         </div>
-        <textarea class="col-8 future">
-        </textarea>
-        <div class="col-2 saveBtn">
+        <textarea class="col-8"></textarea>
+        <button class="col-2 saveBtn">
           <i></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="17">
+        <div class="col-2 hour">
+          <p>5PM</p>
         </div>
+        <textarea class="col-8"></textarea>
+        <button class="col-2 saveBtn">
+          <i></i>
+        </button>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
