added function to display coloring for times

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="col-2 hour">
           <p>11AM</p>
         </div>
-        <textarea class="col-8"></textarea>
+        <textarea class="col-8 description"></textarea>
         <button class="col-2 saveBtn">
           <i></i>
         </button>
@@ -45,7 +45,7 @@
         <div class="col-2 hour">
           <p>10AM</p>
         </div>
-        <textarea class="col-8"></textarea>
+        <textarea class="col-8 description"></textarea>
         <button class="col-2 saveBtn">
           <i></i>
         </button>
@@ -55,7 +55,7 @@
         <div class="col-2 hour">
           <p>11AM</p>
         </div>
-        <textarea class="col-8"></textarea>
+        <textarea class="col-8 description"></textarea>
         <button class="col-2 saveBtn">
           <i></i>
         </button>
@@ -65,7 +65,7 @@
         <div class="col-2 hour">
           <p>12PM</p>
         </div>
-        <textarea class="col-8"></textarea>
+        <textarea class="col-8 description"></textarea>
         <button class="col-2 saveBtn">
           <i></i>
         </button>
@@ -75,7 +75,7 @@
         <div class="col-2 hour">
           <p>1PM</p>
         </div>
-        <textarea class="col-8"></textarea>
+        <textarea class="col-8 description"></textarea>
         <button class="col-2 saveBtn">
           <i></i>
         </button>
@@ -85,7 +85,7 @@
         <div class="col-2 hour">
           <p>2PM</p>
         </div>
-        <textarea class="col-8"></textarea>
+        <textarea class="col-8 description"></textarea>
         <button class="col-2 saveBtn">
           <i></i>
         </button>
@@ -95,7 +95,7 @@
         <div class="col-2 hour">
           <p>3PM</p>
         </div>
-        <textarea class="col-8"></textarea>
+        <textarea class="col-8 description"></textarea>
         <button class="col-2 saveBtn">
           <i></i>
         </button>
@@ -105,7 +105,7 @@
         <div class="col-2 hour">
           <p>4PM</p>
         </div>
-        <textarea class="col-8"></textarea>
+        <textarea class="col-8 description"></textarea>
         <button class="col-2 saveBtn">
           <i></i>
         </button>
@@ -115,7 +115,7 @@
         <div class="col-2 hour">
           <p>5PM</p>
         </div>
-        <textarea class="col-8"></textarea>
+        <textarea class="col-8 description"></textarea>
         <button class="col-2 saveBtn">
           <i></i>
         </button>
