added icon to save button

--- a/index.html
+++ b/index.html
@@ -19,105 +19,106 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+    <header i class="jumbotron">
+      <h1 i class="display-3">Work Day Scheduler</h1>
+      <p i class="lead">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" i class="lead"></p>
     </header>
     <!-- Time-Block Area -->
-    <div class="container">
+    <div i class="container">
 
-      <div class="row time-block" id="9">
-        <div class="col-2 hour">
-          <p>11AM</p>
+      <div i class="row time-block" id="9">
+        <div i class="col-2 hour">
+          <p>9AM</p>
         </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn">
-          <i></i>
+        <textarea i class="col-8 description"></textarea>
+        <button i class="col-2 saveBtn">
+          <i class="fa fa-save"></i class="fa fa-save">
         </button>
       </div>
 
-      <div class="row time-block" id="10">
-        <div class="col-2 hour">
+      <div i class="row time-block" id="10">
+        <div i class="col-2 hour">
           <p>10AM</p>
         </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn">
-          <i></i>
+        <textarea i class="col-8 description"></textarea>
+        <button i class="col-2 saveBtn" id="save">
+          <i class="fa fa-save"></i class="fa fa-save">
         </button>
       </div>
 
-      <div class="row time-block" id="11">
-        <div class="col-2 hour">
+      <div i class="row time-block" id="11">
+        <div i class="col-2 hour">
           <p>11AM</p>
         </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn">
-          <i></i>
+        <textarea i class="col-8 description"></textarea>
+        <button i class="col-2 saveBtn" id="save">
+          <i class="fa fa-save"></i class="fa fa-save">
         </button>
       </div>
 
-      <div class="row time-block" id="12">
-        <div class="col-2 hour">
+      <div i class="row time-block" id="12">
+        <div i class="col-2 hour">
           <p>12PM</p>
         </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn">
-          <i></i>
+        <textarea i class="col-8 description"></textarea>
+        <button i class="col-2 saveBtn" id="save">
+          <i class="fa fa-save"></i class="fa fa-save">
         </button>
       </div>
 
-      <div class="row time-block" id="13">
-        <div class="col-2 hour">
+      <div i class="row time-block" id="13">
+        <div i class="col-2 hour">
           <p>1PM</p>
         </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn">
-          <i></i>
+        <textarea i class="col-8 description"></textarea>
+        <button i class="col-2 saveBtn" id="save">
+          <i class="fa fa-save"></i class="fa fa-save">
         </button>
       </div>
 
-      <div class="row time-block" id="14">
-        <div class="col-2 hour">
+      <div i class="row time-block" id="14">
+        <div i class="col-2 hour">
           <p>2PM</p>
         </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn">
-          <i></i>
+        <textarea i class="col-8 description"></textarea>
+        <button i class="col-2 saveBtn" id="save">
+          <i class="fa fa-save"></i class="fa fa-save">
         </button>
       </div>
 
-      <div class="row time-block" id="15">
-        <div class="col-2 hour">
+      <div i class="row time-block" id="15">
+        <div i class="col-2 hour">
           <p>3PM</p>
         </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn">
-          <i></i>
+        <textarea i class="col-8 description"></textarea>
+        <button i class="col-2 saveBtn" id="save">
+          <i class="fa fa-save"></i class="fa fa-save">
         </button>
       </div>
 
-      <div class="row time-block" id="16">
-        <div class="col-2 hour">
+      <div i class="row time-block" id="16">
+        <div i class="col-2 hour">
           <p>4PM</p>
         </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn">
-          <i></i>
+        <textarea i class="col-8 description"></textarea>
+        <button i class="col-2 saveBtn" id="save">
+          <i class="fa fa-save"></i class="fa fa-save">
         </button>
       </div>
 
-      <div class="row time-block" id="17">
-        <div class="col-2 hour">
+      <div i class="row time-block" id="17">
+        <div i class="col-2 hour">
           <p>5PM</p>
         </div>
-        <textarea class="col-8 description"></textarea>
-        <button class="col-2 saveBtn">
-          <i></i>
+        <textarea i class="col-8 description"></textarea>
+        <button i class="col-2 saveBtn" id="save">
+          <i class="fa fa-save"></i class="fa fa-save">
         </button>
       </div>
     </div>
