added a reset CSS file and updated the readMe

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Work Day Scheduler</title>
@@ -36,7 +37,7 @@
         <div i class="col-2 hour">
           <p>9AM</p>
         </div>
-        <textarea i class="col-8 description"></textarea>
+        <textarea i class="col-8 description" id="txtArea"></textarea>
         <button i class="col-2 saveBtn">
           <i class="fa fa-save"></i class="fa fa-save">
         </button>
