cleaned up code in html and js

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <textarea i class="col-8 description" id="txtArea"></textarea>
         <button i class="col-2 saveBtn">
-          <i class="fa fa-save"></i class="fa fa-save">
+          <i class="fa fa-save"></i>
         </button>
       </div>
 
@@ -49,7 +49,7 @@
         </div>
         <textarea i class="col-8 description"></textarea>
         <button i class="col-2 saveBtn" id="save">
-          <i class="fa fa-save"></i class="fa fa-save">
+          <i class="fa fa-save"></i>
         </button>
       </div>
 
@@ -59,7 +59,7 @@
         </div>
         <textarea i class="col-8 description"></textarea>
         <button i class="col-2 saveBtn" id="save">
-          <i class="fa fa-save"></i class="fa fa-save">
+          <i class="fa fa-save"></i>
         </button>
       </div>
 
@@ -69,7 +69,7 @@
         </div>
         <textarea i class="col-8 description"></textarea>
         <button i class="col-2 saveBtn" id="save">
-          <i class="fa fa-save"></i class="fa fa-save">
+          <i class="fa fa-save"></i>
         </button>
       </div>
 
@@ -79,7 +79,7 @@
         </div>
         <textarea i class="col-8 description"></textarea>
         <button i class="col-2 saveBtn" id="save">
-          <i class="fa fa-save"></i class="fa fa-save">
+          <i class="fa fa-save"></i>
         </button>
       </div>
 
@@ -89,7 +89,7 @@
         </div>
         <textarea i class="col-8 description"></textarea>
         <button i class="col-2 saveBtn" id="save">
-          <i class="fa fa-save"></i class="fa fa-save">
+          <i class="fa fa-save"></i>
         </button>
       </div>
 
@@ -99,7 +99,7 @@
         </div>
         <textarea i class="col-8 description"></textarea>
         <button i class="col-2 saveBtn" id="save">
-          <i class="fa fa-save"></i class="fa fa-save">
+          <i class="fa fa-save"></i>
         </button>
       </div>
 
@@ -109,7 +109,7 @@
         </div>
         <textarea i class="col-8 description"></textarea>
         <button i class="col-2 saveBtn" id="save">
-          <i class="fa fa-save"></i class="fa fa-save">
+          <i class="fa fa-save"></i>
         </button>
       </div>
 
@@ -119,7 +119,7 @@
         </div>
         <textarea i class="col-8 description"></textarea>
         <button i class="col-2 saveBtn" id="save">
-          <i class="fa fa-save"></i class="fa fa-save">
+          <i class="fa fa-save"></i>
         </button>
       </div>
     </div>
